name:                distributed-frp-dunai
version:             0.1.0.0
synopsis:            Extensions to dunai library adding support for distributed applications
-- description:
license:             BSD3
license-file:        LICENSE
author:              Julian Götz
maintainer:          juliangoetz632@gmail.com
-- copyright:
category:            Reactivity, FRP, Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.MonadicStreamFunction.Extra
                     FRP.BearRiver.Extra
                     Network.Client
                     Network.Common
                     Network.Server

  other-modules:     Network.Internal.ServerCommon
  ghc-options:         -Wall
  -- other-extensions:
  build-depends:       base,
                       bearriver,
                       binary,
                       bytestring,
                       containers,
                       distributed-process,
                       distributed-process-async,
                       distributed-process-client-server,
                       distributed-process-extras,
                       dunai,
                       exceptions,
                       mtl,
                       network >= 3.0,
                       network-transport,
                       network-transport-tcp,
                       stm >= 2.4.5
  hs-source-dirs:      src
  default-language:    Haskell2010

library examples-common
  exposed-modules:     Collision, Config, Display, Input, Time, Types
  hs-source-dirs:      examples-common
  default-language:    Haskell2010
  default-extensions:  Arrows
  ghc-options:         -Wall
  build-depends:       base,
                       bearriver,
                       optparse-applicative,
                       sdl2,
                       sdl2-gfx,
                       text

-- temporarily deactivated because of compile erros
--executable simple-example
--  main-is:             Main.hs
--  other-modules:       Game, GameState
--  --ghc-options:         
--  --                     -fprof-auto
--  --                     "-with-rtsopts=-p -s -hd"
-- other-extensions:
-- build-depends:       base,
--                       bearriver,
--                       bytestring,
--                       distributed-process,
--                       distributed-process-client-server,
--                       distributed-process-extras,
--                       dunai,
--                       exceptions,
--                       examples-common,
--                       monadIO,
--                       mtl,
--                       network,
--                       distributed-frp-dunai,
--                       sdl2,
--                       stm >= 2.4.5,
--                       transformers-base
--  hs-source-dirs:      simple-example
--  default-language:    Haskell2010
--  default-extensions:  Arrows

executable distributed-paddles
  main-is:             Main.hs
  other-modules:       
                       GameState,
                       ClientGame,
                       ClientMain,
                       ServerGame,
                       ServerMain
  ghc-options:         -Wall
                       -prof
                       -fprof-auto
  build-depends:       base,
                       bearriver,
                       binary,
                       bytestring,
                       containers,
                       distributed-process,
                       distributed-process-client-server,
                       distributed-process-extras,
                       dunai,
                       exceptions,
                       examples-common,
                       monadIO,
                       mtl,
                       network,
                       distributed-frp-dunai,
                       sdl2,
                       stm >= 2.4.5,
                       transformers-base
  hs-source-dirs:      distributed-paddles
  default-language:    Haskell2010
  default-extensions:  Arrows

-- you may need to add "tests: True" to cabal.project.local
test-suite distributed-frp-dunai-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Tests.hs
  hs-source-dirs:      tests
  default-extensions:  Arrows
  ghc-options:         -threaded -Wall
  build-depends:       base,
                       bearriver,
                       distributed-frp-dunai,
                       distributed-process,
                       distributed-process-client-server,
                       distributed-process-extras,
                       dunai,
                       exceptions,
                       mtl,
                       network >= 3.0,
                       network-transport,
                       network-transport-tcp,
                       stm >= 2.4.5,
                       tasty,
                       tasty-hunit
  other-modules:       ServerTest
  