name:                distributed-frp-dunai
version:             0.1.0.0
synopsis:            Extensions to dunai library adding support for distributed applications
license:             BSD3
license-file:        LICENSE
author:              Julian Götz
maintainer:          juliangoetz632@gmail.com
category:            Reactivity, FRP, Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.MonadicStreamFunction.Extra
                     Data.MonadicStreamFunction.Network.Prediction
                     Data.MonadicStreamFunction.Network.TimeWarp
                     FRP.BearRiver.Extra
                     FRP.BearRiver.Network.Prediction
                     FRP.BearRiver.Network.Reactimate
                     FRP.BearRiver.Network.TimeWarp
                     Data.MessageBuffer
                     Network.Client
                     Network.Common
                     Network.Server

  other-modules:     Network.Internal.ServerCommon
  ghc-options:         -Wall
  build-depends:       base,
                       bearriver,
                       binary,
                       bytestring,
                       containers,
                       distributed-process,
                       distributed-process-async,
                       distributed-process-client-server,
                       distributed-process-extras,
                       dunai,
                       exceptions,
                       mtl,
                       network >= 3.0,
                       network-transport,
                       network-transport-tcp,
                       simple-affine-space,
                       sorted-list,
                       stm >= 2.4.5,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  Arrows,
                       BangPatterns

executable distributed-paddles
  main-is:             Main.hs
  other-modules:       
                       ClientGame,
                       ClientMain,
                       Collision,
                       Config,
                       Display,
                       GameState,
                       Input,
                       ServerGame,
                       ServerMain
                       Time,
                       Types
  ghc-options:         -Wall
                       -- -prof
                       -- -fprof-auto
  build-depends:       base,
                       bearriver,
                       binary,
                       bytestring,
                       containers,
                       distributed-process,
                       distributed-process-client-server,
                       distributed-process-extras,
                       dunai,
                       exceptions,
                       monadIO,
                       mtl,
                       network,
                       optparse-applicative,
                       distributed-frp-dunai,
                       sdl2,
                       sdl2-gfx,
                       stm >= 2.4.5,
                       text
  hs-source-dirs:      distributed-paddles
  default-language:    Haskell2010
  default-extensions:  Arrows,
                       BangPatterns

-- you may need to add "tests: True" to cabal.project.local
test-suite distributed-frp-dunai-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Tests.hs
  hs-source-dirs:      tests
  default-extensions:  Arrows
  ghc-options:         -threaded -Wall
  build-depends:       base,
                       bearriver,
                       distributed-frp-dunai,
                       distributed-process,
                       distributed-process-client-server,
                       distributed-process-extras,
                       dunai,
                       exceptions,
                       mtl,
                       network >= 3.0,
                       network-transport,
                       network-transport-tcp,
                       simple-affine-space,
                       sorted-list,
                       stm >= 2.4.5,
                       tasty,
                       tasty-hunit
  other-modules:       ExtraTest,
                       ServerTest,
                       TimeWarpTest,
                       BearRiverDRMTest,
                       BearRiverTimeWarpTest
  